--- a/dulich.html
+++ b/dulich.html
@@ -1,1 +1,168 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<nav>
+		<ul>
+			<li><a href="index.html">Trang Chủ</a></li>
+			<li><a href="khachsan.html">KHÁCH SẠN</a></li>
+			<li><a href="dulich.html">KHU DU LỊCH</a></li>
+			<li><a href="DAC SAN.html">ĐẶC SẢN</a></li>
+		</ul>
+	</nav>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title >Đắk Lắk tôi yêu. &#8211; 47 Đắk Lắk chào ae nhá!</title>
+	<link rel="stylesheet" href="style.css">
+	<style>
+		header {
+			background-image: url(https://th.bing.com/th/id/OIP.XxfeBZJ1UPoyNgO6Y51UpwHaEQ?w=296&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7);
+			background-size: cover; /* Đảm bảo hình ảnh bao phủ toàn bộ header */
+			height: 600px; /* Điều chỉnh chiều cao của header */
+			color: black; /* Màu chữ trắng hoặc phù hợp với màu nền hình ảnh */
+			text-align: center; /* Căn giữa nội dung */
+			padding-top: 50px; /* Khoảng cách từ trên xuống */
+			
+		}
+	</style>
+	<header id="masthead" class="site-header" role="banner">
+		<div class="navbar">
+			<div class="site-branding">
+				
+				<div class="site-name">
+											<h5 class="site-title">Đắk Lắk tôi yêu.</h1>
+					
+											<h6 class="site-description">47 Đắk Lắk chào ae nhá!</p>
+									</div>
+			</div><!-- .site-branding -->
+	
+		
+					<article id="post-64" class="post-64 post type-post status-publish format-standard hentry category-am-thuc tag-dac-san-dak-lak">
 
+</head>
+<body>
+	<div class ="KHU DU LỊCH" id= "KHU DU LỊCH">
+		<p style="font-size:18px">(Nguồn :<a href="https://www.traveloka.com/vi-vn/explore/destination/dia-diem-du-lich-dak-lak/121915">Điểm danh 8 địa điểm du lịch Đắk Lắk du khách nhất định phải ghé thăm (traveloka.com)</a>)</p>
+	
+	
+	
+	<p>Cách trung tâm thành phố khoảng 10km, Troh Bư là một khu vườn thực vật được xây dựng từ năm 1995. Sau nay, nơi này được cải tạo và trở thành khu bảo tồn loài hoa lan rừng Tây Nguyên. Vì vậy, ngay khi đặt chân đến đây, bạn sẽ cảm nhận ngay mùi hương dịu dàng của các giống lan cũng như sự trong lành của tiết trời miền núi.</p>
+	
+	
+	
+	<p>Với diện tích hơn 20.000m2, khu vườn rộng rãi này được chia thành nhiều khu riêng biệt như vườn hoa, vườn lan, khu bảo tồn động vật… Để không bỏ lỡ mùa lan đẹp nhất, bạn nên đến đây vào những tháng mùa khô nhé. Ngoài ra, với vị trí gần kề với Buôn Đôn, bạn có thể kết hợp <a target="_blank" rel="noreferrer noopener" href="https://www.traveloka.com/vi-vn/explore/destination/du-lich-daklak-co-mot-troh-bu-khac-biet/58673?funnel_source=content_article&amp;funnel_id=WP_121915">tham quan Buôn Đôn và vườn Troh Bư</a> trong 1 ngày của lịch trình khám phá Đắk Lắk.</p>
+	
+	
+	
+	<p><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-19-819x1024.jpg?tr=dpr-2,w-675" alt="Vườn thực vật Troh Bư "></p>
+	
+	
+	
+	<p>Troh Bư là khu vườn thực vật với rất nhiều giống lan rừng và động &#8211; thực vật của Tây Nguyên. @cuongkhii</p>
+	
+	
+	
+	<p><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-20-819x1024.jpg?tr=dpr-2,w-675" alt="Khung cảnh xanh mát tại vườn thực vật Troh Bư"></p>
+	
+	
+	
+	<p>Khung cảnh cực xanh mát tại vườn thực vật Troh Bư. @lim128</p>
+	
+	
+	
+	<p><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-21.jpg?tr=dpr-2,w-675" alt="Vòng cây khô - một trong những địa điểm du lịch Đắk Lắk dân “sống ảo” không thể bỏ qua"></p>
+	
+	
+	
+	<p>Vòng cây khô đẹp hết chỗ chê là nơi “sống ảo” của nhiều tín đồ khi đến Troh Bư. @cuongkhii</p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-22-1024x1024.jpg?tr=dpr-2,w-675" alt="Vườn thực vật Troh Bư yên bình"/></figure>
+	
+	
+	
+	<p>Tại Troh Bư, bạn còn có thể chèo chuyền theo các dòng suối. @internet</p>
+		
+		
+	<p>Dù là một tọa độ mới nhưng bảo tàng Thế giới Cà Phê đã trở thành một trong các <strong>địa điểm du lịch Đắk Lắk</strong> không thể bỏ qua. Nằm tại “thủ phủ cà phê” Buôn Ma Thuột, bảo tàng gồm 5 tòa nhà có hình khối uốn cong được lấy cảm hứng từ mái nhà rông truyền thống Tây Nguyên và nhà dài của người Ê đê.</p>
+	
+	
+	
+	<p>Các khối nhà này được kết nối với nhau một cách ngẫu hứng tạo thành không gian “sống” và những trải nghiệm dành cho mọi giác quan. Toàn bộ công trình nằm trên khuôn viên rộng hơn 13.000 m2 với rất nhiều mảng xanh thiên nhiên. Đặc biệt, cánh đồng cỏ hồng tại đây cũng là điểm check-in quen thuộc của nhiều người</figure>
+	
+	<figure class="wp-block-image size-full"><img decoding="async" width="auto" height="auto" src="./image/image-13.png" alt="" class="wp-image-53" ></figure>
+	
+	
+	<p>Đến với nơi này, bạn sẽ hiểu hơn về lịch sử cà phê, văn hóa uống cà phê và thưởng thức đồ uống phổ biến thứ 2 thế giới này. Đặc biệt, không gian bảo tàng cũng lưu giữ rất nhiều hiện vật được vận chuyển từ bảo tàng Jens Burg (Đức) về. Và tất nhiên là góc nào cũng đẹp và cực “ăn ảnh”.</p>
+	
+	
+	
+	<p><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-16-768x1024.jpg?tr=dpr-0.4166666865348816,w-675" alt="Tìm hiểu văn hóa, lịch sử cà phê"></p>
+	
+	
+	
+	<p><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-17-819x1024.jpg?tr=dpr-0.4166666865348816,w-675" alt="Bức tường nông cụ tại bảo tàng Thế giới Cà phê"></p>
+	
+	
+	
+	<p>Bức tường nông cụ là một trong những góc “sống ảo” phổ biến nhất tại bảo tàng. @tranquangdai</p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://ik.imagekit.io/tvlk/blog/2022/02/dia-diem-du-lich-dak-lak-18-735x1024.jpg?tr=dpr-0.4166666865348816,w-675" alt="Quán cà phê tại Bảo tàng Thế giới Cà phê"/></figure>
+	
+	
+	
+	<p>Ngay cả không gian quán cà phê bên trong cũng “nghệ”. @internet</p>
+	<p>Buôn Đôn (hay còn được gọi là bản Đôn) là <strong>điểm du lịch Đắk Lắk </strong>quen thuộc nhất với hầu hết mọi người, dù đã đặt chân đến đây hay chưa. Đây là một ngôi làng nhỏ nằm trên hòn đảo nổi giữa dòng sông Sêrêpốk, cách trung tâm thành phố gân 40km. Đến với tọa độ này, bạn sẽ được chiêm ngưỡng vẻ đẹp mộc mạc diệu kỳ của núi rừng bạt ngàn cực thơ mộng.</p>
+	
+	
+	
+	
+	
+	
+	
+	
+	<p>Nơi này còn nổi tiếng với những ngôi nhà rông theo kiến trúc truyền thống Tây Nguyên cổ của người Ê đê và M’Nông cùng văn hóa cồng chiêng đặc sắc. Một điều bạn phải làm khi đến Buôn Đôn chính là ghé thăm những chú voi. Hiện tại, buôn Đôn đã không còn cho phép khách du lịch cưỡi voi nên bạn có thể ngắm nhìn, chơi cùng và tắm cho voi nhé.</p>
+	
+	
+	
+	<p>Xung quanh Buôn Đôn còn có nhiều địa điểm tham quan hấp dẫn Đắk Lắk như cầu treo trên sông Sêrêpốk, hồ Dakmil, mộ vua voi Khunjunop… Thời điểm đẹp nhất để vi vu Buôn Đôn là tháng 12 &#8211; tháng 3 năm sau khi thời tiết dễ chịu nhất và cũng là mùa lễ hội truyền thống tại đây (lễ hội đua voi, lễ hội cà phê…).(Nguồn: <a href="https://www.traveloka.com/vi-vn/explore/destination/dia-diem-du-lich-dak-lak/121915">Điểm danh 8 địa điểm du lịch Đắk Lắk du khách nhất định phải ghé thăm (traveloka.com)</a>)</p>
+	
+	
+	
+	
+	
+	
+	<p>                                    <strong>Đến Buôn Đôn vào mùa cà phê là đúng bài nhất.</strong></p>
+	
+	
+	
+	
+	
+	
+	<p>Cầu treo Buôn Đôn là điểm check-in thú vị tại ngôi làng nổi này</p>
+	<p><font _mstmutation="1"></font>Là hồ nước ngọt có diện tích lớn nhất khu vực Tây Nguyên và lớn thứ 2 cả nước (sau hồ Ba Bể), hồ Lắk là một trong những <strong>địa điểm du lịch Đắk Lắk </strong>không thể bỏ qua. Được bao bọc bởi các cánh rừng nguyên sinh và dãy Chư Yang Sin ở thượng nguồn, nơi này luôn đầy ắp nước quanh năm và đẹp như một bức tranh thủy mặc giữa lòng Tây Nguyên. </p>
+	
+	
+	
+	
+	
+	
+	
+	
+	<p>Cách trung tâm Buôn Mê Thuột khoảng 56 km, bạn sẽ mất 1 giờ di chuyển bằng xe máy/ô tô để đến được đây. Khi đặt chân đến hồ Lắk, bạn sẽ cảm thấy cực kỳ xứng đáng bởi khung cảnh thiên nhiên nơi này thơ mộng và trong trẻo đến lạ. Không chỉ có rừng cây, xung quanh hồ là những cánh đồng lúa nước của người M’nông, bản làng và biệt điện Bảo Đại nằm trên ngọn đồi gần kề.</p>
+	
+	
+	
+	<p>Khi tham quan tại đây, bạn phải thử ngay hoạt động chèo thuyền khám phá hồ, xem múa cồng chiêng, thưởng thức ẩm thực, hái cacao, tự tay nấu và uống rượu cần. Trong đó, các món ăn làm từ cá thác lác và bống là đặc sản nhất định phải thử tại đây. Đặc biệt, các <a href="https://www.google.com/search?q=kh%C3%A1ch+s%E1%BA%A1n+%C4%91%E1%BA%AFk+l%E1%BA%AFk+traveloka&amp;rlz=1C5CHFA_enVN984VN984&amp;biw=1440&amp;bih=821&amp;sxsrf=AOaemvK34TcqluUBVARBgoycPBWKL3uOqA%3A1642500156736&amp;ei=PJDmYaKqLJ_e2roPl_qv2A4&amp;ved=0ahUKEwiiuIrzhbv1AhUfr1YBHRf9C-sQ4dUDCA4&amp;uact=5&amp;oq=kh%C3%A1ch+s%E1%BA%A1n+%C4%91%E1%BA%AFk+l%E1%BA%AFk+traveloka&amp;gs_lcp=Cgdnd3Mtd2l6EAM6BwgAEEcQsAM6BwgjELACECc6BAghEApKBAhBGABKBAhGGABQwwlY1zpgoj1oBnACeAGAAX2IAbAOkgEENC4xM5gBAKABAcgBCMABAQ&amp;sclient=gws-wiz&amp;funnel_source=content_article&amp;funnel_id=WP_121915" target="_blank" rel="noreferrer noopener">khách sạn gần hồ Lắk</a> cực xinh xắn nên bạn sẽ có những trải nghiệm lưu trú ổn áp tại đây.
+	
+	
+	
+	
+	
+	
+	
+	<p>       Nguồn: <a href="https://www.traveloka.com/vi-vn/explore/destination/dia-diem-du-lich-dak-lak/121915">Điểm danh 8 địa điểm du lịch Đắk Lắk du khách nhất định phải ghé thăm (traveloka.com)</a></p>
+	</div>
+</body>
+</html>
