--- a/dulich.html
+++ b/dulich.html
@@ -1,45 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Đắk Lắk tôi yêu</title>
+    <link rel="stylesheet" href="style.css">
+		
+</head>
+
+<body>
+    <header id="masthead" class="site-header" role="banner">
+        <div class="navbar">
+            <div class="site-branding">
+                <div class="site-name">
+                </div>
+            </div>
+        </div>
+
+    </header>
 	<nav>
 		<ul>
-			<li><a href="index.html">Trang Chủ</a></li>
-			<li><a href="khachsan.html">KHÁCH SẠN</a></li>
-			<li><a href="dulich.html">KHU DU LỊCH</a></li>
-			<li><a href="DAC SAN.html">ĐẶC SẢN</a></li>
+			<li class="Menu"><a href="index.html">Trang Chủ</a></li>
+			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN</a></li>
+			<li class="Menu"><a href="dulich.html">KHU DU LỊCH</a></li>
+			<li class="Menu"><a href="DAC SAN.html">ĐẶC SẢN</a></li>
+			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
 		</ul>
 	</nav>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title >Đắk Lắk tôi yêu. &#8211; 47 Đắk Lắk chào ae nhá!</title>
-	<link rel="stylesheet" href="style.css">
-	<style>
-		header {
-			background-image: url(https://th.bing.com/th/id/OIP.XxfeBZJ1UPoyNgO6Y51UpwHaEQ?w=296&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7);
-			background-size: cover; /* Đảm bảo hình ảnh bao phủ toàn bộ header */
-			height: 600px; /* Điều chỉnh chiều cao của header */
-			color: black; /* Màu chữ trắng hoặc phù hợp với màu nền hình ảnh */
-			text-align: center; /* Căn giữa nội dung */
-			padding-top: 50px; /* Khoảng cách từ trên xuống */
-			
-		}
-	</style>
-	<header id="masthead" class="site-header" role="banner">
-		<div class="navbar">
-			<div class="site-branding">
-				
-				<div class="site-name">
-											<h5 class="site-title">Đắk Lắk tôi yêu.</h1>
-					
-											<h6 class="site-description">47 Đắk Lắk chào ae nhá!</p>
-									</div>
-			</div><!-- .site-branding -->
-	
-		
-					<article id="post-64" class="post-64 post type-post status-publish format-standard hentry category-am-thuc tag-dac-san-dak-lak">
+		</ul>
+	</nav>	<div class ="KHU DU LỊCH" id= "KHU DU LỊCH">
 
-</head>
-<body>
-	<div class ="KHU DU LỊCH" id= "KHU DU LỊCH">
 		<p style="font-size:18px">(Nguồn :<a href="https://www.traveloka.com/vi-vn/explore/destination/dia-diem-du-lich-dak-lak/121915">Điểm danh 8 địa điểm du lịch Đắk Lắk du khách nhất định phải ghé thăm (traveloka.com)</a>)</p>
 	
 	
