--- a/DAC SAN.html
+++ b/DAC SAN.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Đắk Lắk tôi yêu</title>
+    <link rel="stylesheet" href="style.css">
+		
+</head>
+
+<body>
+    <header id="masthead" class="site-header" role="banner">
+        <div class="navbar">
+            <div class="site-branding">
+                <div class="site-name">
+                </div>
+            </div>
+        </div>
+
+    </header>
 	<nav>
 		<ul>
-			<li><a href="index.html">Trang Chủ</a></li>
-			<li><a href="khachsan.html">KHÁCH SẠN</a></li>
-			<li><a href="dulich.html">KHU DU LỊCH</a></li>
-			<li><a href="DAC SAN.html">ĐẶC SẢN</a></li>
+			<li class="Menu"><a href="index.html">Trang Chủ</a></li>
+			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN</a></li>
+			<li class="Menu"><a href="dulich.html">KHU DU LỊCH</a></li>
+			<li class="Menu"><a href="DAC SAN.html">ĐẶC SẢN</a></li>
+			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
 		</ul>
 	</nav>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title >Đắk Lắk tôi yêu. &#8211; 47 Đắk Lắk chào ae nhá!</title>
-	<link rel="stylesheet" href="style.css">
-	<style>
-		header {
-			background-image: url(https://th.bing.com/th/id/OIP.XxfeBZJ1UPoyNgO6Y51UpwHaEQ?w=296&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7);
-			background-size: cover; /* Đảm bảo hình ảnh bao phủ toàn bộ header */
-			height: 600px; /* Điều chỉnh chiều cao của header */
-			color: black; /* Màu chữ trắng hoặc phù hợp với màu nền hình ảnh */
-			text-align: center; /* Căn giữa nội dung */
-			padding-top: 50px; /* Khoảng cách từ trên xuống */
-			
-		}
-	</style>
-	<header id="masthead" class="site-header" role="banner">
-		<div class="navbar">
-			<div class="site-branding">
-				
-				<div class="site-name">
-											<h5 class="site-title">Đắk Lắk tôi yêu.</h1>
-					
-											<h6 class="site-description">47 Đắk Lắk chào ae nhá!</p>
-									</div>
-			</div><!-- .site-branding -->
-	
-		
-					<article id="post-64" class="post-64 post type-post status-publish format-standard hentry category-am-thuc tag-dac-san-dak-lak">
-
-</head>
-<body>
-	<div class="ĐẶC SẢN" id="ĐẶC SẢN">
+  	<div class="baiviet"><div class="ĐẶC SẢN" id="ĐẶC SẢN">
 		<p>MẮC CA ĐẮK LẮK</p>
 	<p>Hạt mắc ca có nguồn gốc đầu tiên tại Úc, ngày nay nó đã được trồng nhiều ở nước ta đặc biệt là khu vực Đắk Lắk.&nbsp;<strong>Macca Đắk Lắk</strong>&nbsp;hiện đã trở thành loại hạt đặc sản cho vùng này với rất nhiều ưu điểm nổi bật. Bài viết hôm nay chúng tôi sẽ chia sẻ đến với các bạn những thông tin hữu ích hơn về loại hạt macca này và so sánh chúng với một số sản phẩm mắc ca hiện đang có trên thị trường.</p>
 	
@@ -208,7 +197,8 @@
 	
 	<p><a href="https://1.bp.blogspot.com/-TimCmfLIU2Y/XtJUMDKIfgI/AAAAAAAAAp8/tVqtUTdwz5s3OvQY84ht1mh6t0m4QwL-ACK4BGAsYHg/d/hinh-3.jpg"></a></p>
 	
-	</div>>
+	</div>></div>
+	
 	
 </body>
 </html>
