--- a/DAC SAN.html
+++ b/DAC SAN.html
@@ -36,6 +36,15 @@
 			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
 		</ul>
 	</nav>
+	<div class="container">
+        <div class="square">
+			<a href="dacsan1.html" class="LINK">CÁC ĐẶC SẢN CỦA ĐẮK LẮK</a>
+			<p class="baiviet">Những đặc sản của ĐẮK Lắk</p>
+			<figure class="wp-block-image"><img width="973px" height="495px" src="https://th.bing.com/th/id/R.71623d16b5409f3361095e5e56c78e59?rik=uxXFPEapd%2bAWEg&pid=ImgRaw&r=0" alt=""></figure>
+			<a href="https://ticotravel.com.vn/dac-san-dak-lak/">                          Nguồn ảnh</a>
+		</div>
+    </div>
+
   	<div class="baiviet"><div class="ĐẶC SẢN" id="ĐẶC SẢN">
 		<p>MẮC CA ĐẮK LẮK</p>
 	<p>Hạt mắc ca có nguồn gốc đầu tiên tại Úc, ngày nay nó đã được trồng nhiều ở nước ta đặc biệt là khu vực Đắk Lắk.&nbsp;<strong>Macca Đắk Lắk</strong>&nbsp;hiện đã trở thành loại hạt đặc sản cho vùng này với rất nhiều ưu điểm nổi bật. Bài viết hôm nay chúng tôi sẽ chia sẻ đến với các bạn những thông tin hữu ích hơn về loại hạt macca này và so sánh chúng với một số sản phẩm mắc ca hiện đang có trên thị trường.</p>
