--- a/dacsan1.html
+++ b/dacsan1.html
@@ -14,13 +14,13 @@
 		text-align: center;
 		padding-top: 50px;
 		}
-	</style> 
+	</style>	
 </head>
 
 <body>
     <header id="masthead" class="site-header" role="banner">
         <div class="navbar">
-            <div class=   "site-branding">
+            <div class="site-branding">
                 <div class="site-name">
                 </div>
             </div>
@@ -29,21 +29,10 @@
     </header>
 	<nav>
 		<ul>
-			<li class="Menu"><a href="index.html">TRANG CHỦ</a></li>
+			<li class="Menu"><a href="index.html">Trang Chủ</a></li>
 			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN</a></li>
 			<li class="Menu"><a href="dulich.html">KHU DU LỊCH</a></li>
 			<li class="Menu"><a href="DAC SAN.html">ĐẶC SẢN</a></li>
 			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
 		</ul>
 	</nav>
-	<div class="container">
-        <div class="square">
-			<a href="khachsan1.html" class="LINK">CÁC KHU DU LỊCH BẠN NÊN TỚI</a>
-			<p class="baiviet">Một số khách sạn "xịn sò" tại Đắk Lắk mà du khách không thể bỏ qua</p>
-			<figure class="wp-block-image"><img width="973px" height="495px" src="https://th.bing.com/th/id/R.92892046f59d4291368ea46381a9a635?rik=uj7VwCPqVKsYsg&pid=ImgRaw&r=0" alt=""></figure>
-			<a href="https://www.vietnambooking.com/hotel/vietnam/khach-san-dak-lak.html">                          Nguồn ảnh</a>
-		</div>
-    </div>
-
-</body>
-</html>
