--- a/dacsan1.html
+++ b/dacsan1.html
@@ -36,3 +36,175 @@
 			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
 		</ul>
 	</nav>
+    <div class="baiviet"><div class="ĐẶC SẢN" id="ĐẶC SẢN">
+		<p>MẮC CA ĐẮK LẮK</p>
+	<p>Hạt mắc ca có nguồn gốc đầu tiên tại Úc, ngày nay nó đã được trồng nhiều ở nước ta đặc biệt là khu vực Đắk Lắk.&nbsp;<strong>Macca Đắk Lắk</strong>&nbsp;hiện đã trở thành loại hạt đặc sản cho vùng này với rất nhiều ưu điểm nổi bật. Bài viết hôm nay chúng tôi sẽ chia sẻ đến với các bạn những thông tin hữu ích hơn về loại hạt macca này và so sánh chúng với một số sản phẩm mắc ca hiện đang có trên thị trường.</p>
+	
+	
+	
+	<h2 class="wp-block-heading" id="gioi-thieu-ve-cay-mac-ca-dak-lak">Giới thiệu về cây Mắc Ca Đăk Lăk</h2>
+	
+	
+	
+	<p>Cây mắc ca có nguyên sản thuộc vùng Á nhiệt đới ẩm hay còn gọi là Châu Úc. Ngày nay nó được trồng ở nhiều quốc gia khác nhau trong đó có Việt Nam.&nbsp;Tại Việt Nam hiện cây macca được trồng nhiều nhất ở Đăk Lăk&nbsp;và được mọi người gọi chung là macca Đắk Lắk. Sản phẩm có giá trị kinh tế cao nhất đó chính là quả mắc ca. Tuổi thọ kinh doanh kéo dài tầm khoảng 40 – 60 năm.</p>
+	
+	
+	
+	<p>Cây mắc ca Đắk Lắk là cây gỗ lớn thường xanh cao tới 18m và có tán rộng tới 15m. Hoa mắc ca nở rộ từ tháng 12 đến tháng 2 năm sau, cũng có khi kéo dài cho đến tháng 4. Chiều dài bông hoa từ 15 – 25cm, mỗi chùm hoa chỉ đậu từ 5 cho đến 17 quả. Hoa có màu trắng hoặc màu hồng nhạt. Hoa mắc ca không phát ở đầu cành mà chúng sẽ mọc ra từ nách lá cành 1 – 2 hoàn toàn độc lập so với phát lộc cành non.</p>
+	
+	
+	
+	<p>Hạt macca Đắk Lắk hình trái đào nhỏ hoặc tròn như hòn bi. Khi chín vỏ quả sẽ chuyển từ màu xanh sang màu nâu, vỏ quả khi khô tự nứt. Vỏ macca có màu nâu rất cứng và nhân hạt có màu trắng sữa.</p>
+	
+	
+	
+	<figure class="wp-block-image"><img width="auto" height="auto" src="https://www.binhduongvn.city/uploads/files/2020/09/03/mac-ca-dak-lak-1.jpg" alt="Cây mắc ca Đăk Lăk cao và cho nhiều quả"/><figcaption class="wp-element-caption">Cây mắc ca Đăk Lăk cao và cho nhiều quả</figcaption></figure>
+	
+	
+	
+	<h2 class="wp-block-heading" id="so-sanh-mac-ca-dak-lak-voi-mot-so-loai-macca-khac-tren-thi-truong">So sánh mắc ca Đắk Lắk với một số loại macca khác trên thị trường</h2>
+	
+	
+	
+	<p>Hiện nay trên thị trường có rất nhiều loại mắc ca khác nhau, nào là mắc ca Úc, mắc ca Đắk Lắk, mắc ca Trung Quốc hay mắc ca Nam Phi. Chúng ta hãy cùng dựa vào những đặc điểm dưới đây để có thể đánh giá được chất lượng của mắc ca Đắk Lắk kỹ hơn nhé.</p>
+	
+	
+	
+	<h3 class="wp-block-heading" id="mac-ca-dak-lak">Mắc ca Đắk Lắk</h3>
+	
+	
+	
+	<p>Mắc ca Đắk Lắk được trồng trong thời gian khá lâu, đầu tư vốn lớn. Thông thường khoảng 5 6 năm mới cho trái đều đặn. Hiện nay mắc ca Đắk Lắk đang được cải thiện về chất lượng, kỹ thuật và canh tác. Ít năm nữa năng suất của loại macca này sẽ tăng.</p>
+	
+	
+	
+	<p>Sản phẩm mắc ca Đắk Lắk được cung cấp ra thị trường chủ yếu là dạng&nbsp;<a href="https://www.binhduongvn.city/kinh-te/macca-say">mắc ca sấy</a>, tách nứt vỏ, hạt có lớp vỏ dày và mỏng khác nhau.&nbsp;<a href="https://www.binhduongvn.city/kinh-te/hat-macca">Hạt mắc ca</a>&nbsp;thường không đồng đều nhau. Hạt mắc ca Đắk Lắk có&nbsp;vị thơm ngon giòn béo và vị ngọt tự nhiên. Chất lượng của nó tương đương với hạt macca Úc.</p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://www.binhduongvn.city/uploads/files/2020/09/03/mac-ca-dak-lak-2.jpg" alt="Mắc ca Đắc Lắc có vỏ mỏng và vị thơm ngon giòn béo"/><figcaption class="wp-element-caption">Mắc ca Đắc Lắc có vỏ mỏng và vị thơm ngon giòn béo</figcaption></figure>
+	
+	
+	
+	<h3 class="wp-block-heading" id="hat-mac-ca-uc">Hạt mắc ca Úc</h3>
+	
+	
+	
+	<p>Hạt mắc ca Úc được đánh giá là&nbsp;ngon nhất trên thị trường&nbsp;hiện nay. Thời gian thu hoạch trái chỉ từ 2 – 4 năm trồng. Mắc ca Úc thường được trồng với quy mô lớn nên cho năng suất cao. Kích thước của các hạt cứng trông rất đồng đều. Vị mắc ca Úc được đánh giá cực kỳ&nbsp;thơm ngon, bùi bùi, béo ngậy. Hạt mắc ca Úc thường được đóng gói nguyên lon và nhập khẩu về Việt Nam.</p>
+	
+	
+	
+	<h3 class="wp-block-heading" id="mac-ca-trung-quoc">Mắc ca Trung Quốc</h3>
+	
+	
+	
+	<p>Mắc ca Trung Quốc dễ nhận biết nhất trong các loại mắc ca. Chúng có vỏ màu đen bóng, thường được cưa bằng máy nên trong đều, sắc nét và đẹp mắt. Khi ngửi thường có&nbsp;mùi thơm ít&nbsp;hơn so với mắc ca Đắk Lắk,&nbsp;không ngọt và ít béo&nbsp;hơn so với mắc ca Đắk Lắk. Đồng thời khi ăn thường sẽ có mùi dầu nặng hơn.</p>
+	
+	
+	
+	<h3 class="wp-block-heading" id="mac-ca-nam-phi">Mắc ca Nam Phi</h3>
+	
+	
+	
+	<p>Mắc ca Nam Phi sẽ có vỏ dày, màu nâu sáng nhưng sần sùi, vỏ dày ít nhân hơn so với mắc ca Đắk Lắk và mắc ca Úc. Vị của hạt macca Nam Phi&nbsp;nhạt và bở nhưng thơm và ngon hơn so với mắc ca Trung Quốc. Tuy nhiên nó lại không ngon và chất lượng như mắc ca Đắk Lắk và mắc ca Úc.</p>
+				
+	<p><strong>Cây cà phê ở Đắk Lắk</strong> hiện nay được trồng chủ yếu ở vùng chỉ dẫn địa lý cà phê Buôn Ma Thuột với diện tích 213.000ha, lớn nhất cả nước (chiếm hơn 30% diện tích cả nước), năng suất bình quân đạt hơn 27 tạ/ha, sản lượng hàng năm đạt khoảng 530.000-540.000 tấn cà phê nhân. </p>
+	
+	
+	
+	<p><strong>Cà phê Đắk Lắk</strong> nổi tiếng với hương vị độc đáo và phong phú. Cà phê arabica thường có hương vị nhẹ nhàng, thanh mát, với các ghi chú của hoa quả và hương thảo mộc. Trong khi đó, cà phê robusta thường có hương vị mạnh mẽ, đậm đà, với vị đắng và hậu vị dài. Được các du khách đến thăm mê mẩn. Cà phê rất nổi tiếng ở Đắk Lắk và là nguồn cung cấp cà phê lớn cho ngành cà phê nhà nước. Ngoài ra, ở thành phố Buôn Ma Thuột cứ hai năm lại tổ chức Lễ hội Cà phê, du khách có thể thưởng thức miễn phí các loại cà phê thơm ngon đến từ khắp các thương hiệu khác nhau.</p>
+	
+	
+	
+	<figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="auto" height="auto" src="https://hoaquadaklak.com/image/data/tin-tuc/Lan-2020/cay-ca-phe.jpg" alt="" class="wp-image-62"/></figure>
+	
+	
+	
+	<p>Nguồn: https://hoaquadaklak.com</p>
+	
+	
+	
+	<p>Một số cà phê phổ biến ở Đắk Lắk được du khách ưa chuộng như : Cà phê chồn, cà phê rang, &#8230;</p>
+	
+	
+	
+	<p>Cà phê chồn ở Tây Nguyên nổi tiếng với hương vị vừa có vị bùi bùi của đất, lại ngai ngái như bị mốc, vừa dìu dịu, lại giống như nước sirô, đậm đà như mang theo âm hưởng của rừng già và của sôcôla. Cà phê chồn có vị đắng dịu, ngọt ngào và vô cùng đậm đà.</p>
+	
+	
+	
+	<p class="has-large-font-size"><strong>2. Sầu riêng</strong></p>
+	
+	
+	<div class="wp-block-image">
+	<figure class="aligncenter"><img decoding="async" src="https://1.bp.blogspot.com/-m-FxYvaYV8s/XtJS1j6ijGI/AAAAAAAAApQ/0hVbGLsK6WYkJ8bCqaD4xDKq1ptHUj3YACK4BGAsYHg/d/hinh-1.jpg" alt="" class="wp-image-170"/></figure></div>
+	
+	<div class="wp-block-image">
+	<figure class="aligncenter"><img decoding="async" src="https://1.bp.blogspot.com/-2-h3_aqpkcE/XtJTwZz7h3I/AAAAAAAAApo/cisQkw_1piwTvgim3nJ2v1ANprwHrAKCwCK4BGAsYHg/d/hinh-2.jpg" alt="" class="wp-image-170"/></figure></div>
+	
+	
+	<p>Chẳng biết từ bao giờ và vì sao, mà loại trái cây thuộc dạng nữ hoàng của các loại cây ăn trái lại có cái tên chẳng mấy vui vẻ Sầu Riêng. Giấu trong lớp gai nhọn hoắc sẵn sàng xin vài giọt… nếu ai lỡ tay động mạng vào, là một múi vàng ương, thơm lừng. Vị béo và vị ngọt hòa quyện khiến hương vị Sầu Riêng không thể lẫn với bất kỳ trái cây nào. Ở đời trái nào thì ăn vũng được chứ Sầu Riêng mà ăn vụng thì cả xóm biết, vì mùi vị vô cùng đặc biệt.</p>
+	<p>Sầu Riêng có nhiều giống, mỗi giống có ưu khuyết điểm khác nhau. Giống Sầu Riêng hột có lâu đời nhất, hương vị thơm ngon, có điều tỉ lệ cơm thấp, thấy trái to tướng vậy chứ khui ra toàn vỏ là vỏ, hột to đùng, lớp cơm mỏng dính như vỏ trứng gà, ăn hoài không đã. Sau này có thêm nhiều giống ghép như Sầu Riêng Sữa hạt lép, Chuồng Bò, Chín Hóa, Khổ Qua. Nhưng nổi trội về hiệu quả kinh tế và chất lượng chỉ có giống Ri 6, Mon Thon (Dona).</p>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-X_2EDYgPcto/XtJXlHmh16I/AAAAAAAAArg/iwKX1hYgDNUHocble7Vony9x9EYvSyGVgCK4BGAsYHg/d/hinh-7.jpg"></a></p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://1.bp.blogspot.com/-wO-wH4ToEzc/XtJaTCOACMI/AAAAAAAAAt4/-1rv0Hf0s9gPzag1251KcBIBX_BQh2d6QCK4BGAsYHg/d/hinh-11.jpg" alt=""/></figure>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-wO-wH4ToEzc/XtJaTCOACMI/AAAAAAAAAt4/-1rv0Hf0s9gPzag1251KcBIBX_BQh2d6QCK4BGAsYHg/d/hinh-11.jpg"></a></p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://1.bp.blogspot.com/-BUrYR_cFRio/XtJaTuZZzSI/AAAAAAAAAuA/7Y7aSyAYtVYxNomFQVL8agrXYEeMEFzLQCK4BGAsYHg/d/hinh-13.jpg" alt=""/></figure>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-BUrYR_cFRio/XtJaTuZZzSI/AAAAAAAAAuA/7Y7aSyAYtVYxNomFQVL8agrXYEeMEFzLQCK4BGAsYHg/d/hinh-13.jpg"></a></p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://1.bp.blogspot.com/-AZ8f6TLAc0s/XtJXkUzPypI/AAAAAAAAArY/fXhseIrf7NcQTS2Tr1bbdZGuD437X75wwCK4BGAsYHg/d/hinh-5.jpg" alt=""/></figure>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-AZ8f6TLAc0s/XtJXkUzPypI/AAAAAAAAArY/fXhseIrf7NcQTS2Tr1bbdZGuD437X75wwCK4BGAsYHg/d/hinh-5.jpg"></a></p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://1.bp.blogspot.com/-ZVH2OFF1USA/XtJX7-2X3tI/AAAAAAAAAsI/EPtJuLcm9QYy_bRQtXf6TjvobGn9FcLNwCK4BGAsYHg/d/hinh-9.jpg" alt=""/></figure>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-ZVH2OFF1USA/XtJX7-2X3tI/AAAAAAAAAsI/EPtJuLcm9QYy_bRQtXf6TjvobGn9FcLNwCK4BGAsYHg/d/hinh-9.jpg"></a></p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://1.bp.blogspot.com/-jAWyy0LShGg/XtJX7lYAKfI/AAAAAAAAAsE/Nau3HbbybAsI-G9YRXaXrBe3GvuH-DoYACK4BGAsYHg/d/hinh-8.jpg" alt=""/></figure>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-jAWyy0LShGg/XtJX7lYAKfI/AAAAAAAAAsE/Nau3HbbybAsI-G9YRXaXrBe3GvuH-DoYACK4BGAsYHg/d/hinh-8.jpg"></a></p>
+	
+	
+	
+	<h2 class="wp-block-heading">Giá Trị Dinh Dưỡng Của Sầu Riêng</h2>
+	
+	
+	
+	<p>Trái sầu riêng có chứa rất nhiều chất dinh dưỡng như đường, chất đạm, chất béo và cả chất xơ nên rất được yêu thích. Với tỷ lệ 100 gram thịt quả thì sầu riêng có thể cho giá trị dinh dưỡng như sau: Vitamin A (20- 30 IU), Axit ascobic (23,9- 25,0 mg), Canxi (7.6-9,0 mg), Phốt pho (37,8- 44,0 mg), Laki (436 mg), Thiamin (0,20 mg), Riboflavin (0,20 mg), Nacin (83- 0,70 mg), Sắt (0,73- 1,0 mg), Đường (12 g), Protein ( 2,5 – 2,8 g), Chất béo ( 5,33 g), Chất xơ (3,8 g), Carbonhydrate toàn phần (30,4- 34,1 g) và năng lượng là 144 Kcal.</p>
+	
+	
+	
+	<figure class="wp-block-image"><img decoding="async" src="https://1.bp.blogspot.com/-TimCmfLIU2Y/XtJUMDKIfgI/AAAAAAAAAp8/tVqtUTdwz5s3OvQY84ht1mh6t0m4QwL-ACK4BGAsYHg/d/hinh-3.jpg" alt=""/></figure>
+	
+	
+	
+	<p><a href="https://1.bp.blogspot.com/-TimCmfLIU2Y/XtJUMDKIfgI/AAAAAAAAAp8/tVqtUTdwz5s3OvQY84ht1mh6t0m4QwL-ACK4BGAsYHg/d/hinh-3.jpg"></a></p>
+	
+	</div>></div>
+</body>
+</html>
