--- a/khachsan.html
+++ b/khachsan.html
@@ -38,7 +38,7 @@
 	</nav>
 	<div class="container">
         <div class="square">
-			<a href="khachsan1.html" class="LINK">CÁC KHU DU LỊCH BẠN NÊN TỚI</a>
+			<a href="khachsan1.html" class="LINK">KHÁCH SẠN BẠN NÊN GHÉ TỚI Ở KHI ĐI DU LỊCH ĐẮK LẮK</a>
 			<p class="baiviet">Một số khách sạn "xịn sò" tại Đắk Lắk mà du khách không thể bỏ qua</p>
 			<figure class="wp-block-image"><img width="973px" height="495px" src="https://th.bing.com/th/id/R.92892046f59d4291368ea46381a9a635?rik=uj7VwCPqVKsYsg&pid=ImgRaw&r=0" alt=""></figure>
 			<a href="https://www.vietnambooking.com/hotel/vietnam/khach-san-dak-lak.html">                          Nguồn ảnh</a>
