--- a/TQuan daklak.html
+++ b/TQuan daklak.html
@@ -30,7 +30,7 @@
 	<nav>
 		<ul>
 			<li class="Menu"><a href="index.html">Trang Chủ</a></li>
-			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN</a></li>
+			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN-HOMESTAY</a></li>
 			<li class="Menu"><a href="dulich.html">KHU DU LỊCH</a></li>
 			<li class="Menu"><a href="DAC SAN.html">ĐẶC SẢN</a></li>
 			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
