--- a/khachsan.html
+++ b/khachsan.html
@@ -30,20 +30,21 @@
 	<nav>
 		<ul>
 			<li class="Menu"><a href="index.html">TRANG CHỦ</a></li>
-			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN</a></li>
+			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN-HOMESTAY</a></li>
 			<li class="Menu"><a href="dulich.html">KHU DU LỊCH</a></li>
 			<li class="Menu"><a href="DAC SAN.html">ĐẶC SẢN</a></li>
 			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
 		</ul>
 	</nav>
-	<div class="container">
-        <div class="square">
+        <div class="squaredctulen">
 			<a href="khachsan1.html" class="LINK">KHÁCH SẠN BẠN NÊN GHÉ TỚI Ở KHI ĐI DU LỊCH ĐẮK LẮK</a>
 			<p class="baiviet">Một số khách sạn "xịn sò" tại Đắk Lắk mà du khách không thể bỏ qua</p>
 			<figure class="wp-block-image"><img width="973px" height="495px" src="https://th.bing.com/th/id/R.92892046f59d4291368ea46381a9a635?rik=uj7VwCPqVKsYsg&pid=ImgRaw&r=0" alt=""></figure>
-			<a href="https://www.vietnambooking.com/hotel/vietnam/khach-san-dak-lak.html">                          Nguồn ảnh</a>
 		</div>
-    </div>
+		<div class="squaredctulen2">
+			<a href="HOMESTAY.html" class="LINK">CÁC HOMESTAY MÀ KHI ĐI DU LỊCH ĐẮK LẮK BẠN NÊN CHÉ ĐẾN Ở</a>
+			<figure class="wp-block-image"><img width="973px" height="495px"src="https://th.bing.com/th/id/OIP.yllK8i2Sizuoj1GyuBjgFAHaE8?rs=1&pid=ImgDetMain" alt=""></figure>
+		</div>
 
 </body>
 </html>
