--- a/khachsan1.html
+++ b/khachsan1.html
@@ -29,8 +29,8 @@
     </header>
 	<nav>
 		<ul>
-			<li class="Menu"><a href="index.html">Trang Chủ</a></li>
-			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN</a></li>
+			<li class="Menu"><a href="index.html">TRANG CHỦ</a></li>
+			<li class="Menu"><a href="khachsan.html">KHÁCH SẠN-HOMESTAY</a></li>
 			<li class="Menu"><a href="dulich.html">KHU DU LỊCH</a></li>
 			<li class="Menu"><a href="DAC SAN.html">ĐẶC SẢN</a></li>
 			<li class="Menu"><a href="AMTHUC.html">ẨM THỰC ĐẮK LẮK</a></li>
